# NPA-SD-artifact

./: .gitignore  01_reproduce_chr3.py  02_genome_wide.py  03_evaluate_candidate.py  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
src/npa_sd/: __init__.py  candidate.py  config.py  data.py  figures.py  genome_wide.py  npa.py  sd.py
tests/: test_npa.py
