[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "npa-sd-artifact"
version = "0.1.0"
description = "Reanalysis of non-parental-allele clusters in 1000 Genomes trios as segmental-duplication mapping artifacts"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Verónica Zumpano Blumenfeld", email = "veronicazumpanoblumenfeld@gmail.com", Paper= "Reanalysis_Myakishev-Rempel" }]
dependencies = [
    "cyvcf2>=0.30",
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
